Changed report-downloads class to download-list; changed ip-address-reports class to ip-address-lists; updated video related definition to fix white space; updated download-list and ip-address-lists table definitions to fix responsiveness on small devices

--- a/assets/stylesheets/dashboard.scss
+++ b/assets/stylesheets/dashboard.scss
@@ -3,6 +3,7 @@
 // ==============================
 
 .dashboard {
+
   main {
     padding-bottom: 0;
   }
@@ -38,7 +39,7 @@
     }
 
     @include media-breakpoint-up(md) {
-      margin-right: 2rem;
+      margin-right: 1.80rem;
 
       &:last-child {
         margin-right: 0;
@@ -104,47 +105,69 @@
   }
 
   .video-container {
-    position: relative;
-    padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
-    padding-top: 0;
     height: 0;
-    overflow: hidden;
-    width: 100%;
     margin-bottom: 1rem;
-  }
-
-  .video-container video {
-    position: absolute;
-    top: 0;
-    left: 0;
+    overflow: hidden;
+    padding-top: 56.25%; /* 16:9 Aspect Ratio */
+    padding-bottom: 0;
+    position: relative;
     width: 100%;
-    height: 100%;
+    video {
+      border: 1px solid #222;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+    }
   }
 }
 
 table {
 
-  &.ip-address-reports {
+  &.ip-address-lists {
 
     th:nth-child(1) {
-      width: 80%;
+      width: 70%;
     }
     td:nth-child(2) {
       text-align: right;
     }
   }
 
-  &.report-downloads {
+  &.download-lists {
     th {
       &:nth-child(1) {
-        width: 40%;
+        width: 35%;
+      }
+      &:nth-child(2) {
+        display: none;
+        @include media-breakpoint-up(sm) {
+          display: table-cell;
+        }
       }
       &:nth-child(3) {
-        text-align: right;
+        display: none;
+        @include media-breakpoint-up(sm) {
+          display: table-cell;
+          text-align: right;
+        }
       }
     }
     td {
-      &:nth-child(3),
+      &:nth-child(2) {
+        display: none;
+        @include media-breakpoint-up(sm) {
+          display: table-cell;
+        }
+      }
+      &:nth-child(3) {
+        display: none;
+        @include media-breakpoint-up(sm) {
+          display: table-cell;
+          text-align: right;
+        }
+      }
       &:nth-child(4) {
         text-align: right;
       }
